// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaPageBlocks Paragraph should render correctly - dark mode 1`] = `
.c0 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #F2F2F2;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (max-width:62.9375rem) {
  .c0 {
    padding-bottom: 0.5rem;
  }
}

<p
  class="c0"
  id="idAttr"
>
  Example text
</p>
`;

exports[`MediaPageBlocks Paragraph should render correctly 1`] = `
.c0 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (max-width:62.9375rem) {
  .c0 {
    padding-bottom: 0.5rem;
  }
}

<p
  class="c0"
  id="idAttr"
>
  Example text
</p>
`;
